# cuda_optimizer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  adaptive_sampler.cpp  adaptive_sampler.h  cuda_optimizer.cu  errors.h  example.h  format_number.h  generators.h  grid_searchers.h  kernels.cu  kernels.h  metrics.cpp  metrics.h  optimizer.h  reporter.cpp  reporter.h  timer.h
src/examples/: add_strided.cu  add_strided.h  add_strided_managed.cu  add_strided_managed.h  add_strided_unmanaged.cu  add_strided_unmanaged.h  add_unstrided.cu  add_unstrided.h  add_unstrided_managed.cu  add_unstrided_managed.h  add_unstrided_unmanaged.cu  add_unstrided_unmanaged.h  add_with_stride.cu  add_with_stride.h  euclidian_distance.cu  euclidian_distance.h  euclidian_distance_strided.cu  euclidian_distance_strided.h  euclidian_distance_unstrided.cu  euclidian_distance_unstrided.h  matrix_multiply.cu  matrix_multiply.h
tests/: CMakeLists.txt  test_adaptive_sampler.cpp  test_format_number.cpp  test_generators.cpp  test_metrics.cpp  test_reporter.cpp
